# advent-2023

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
src/: main.rs  server.rs
src/dayone/: solution.rs
src/error/: mod.rs
src/one/: solution.rs
src/solutions/five/: mod.rs  solution.rs
src/solutions/four/: solution.rs
src/solutions/one/: solution.rs
src/solutions/six/: solution.rs
src/solutions/three/: solution.rs
src/solutions/two/: solution.rs
src/two/: solution.rs
src/util/: mod.rs
