[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
description = "Learning Rust via the Advent of Code (2023)"
repository = "https://github.com/fmdunlap/advent-of-code"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.2.1"
axum = "0.7.2"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
